<resources>
    <string name="app_name">SchoolDiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_lesson">Add lesson</string>
    <string name="clear_all">Clear all</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="array">ARRAY</string>
    <string name="sharpref">SharPref</string>
    <string name="firebase">FireBase</string>
</resources>